tests/ui/ffi-attrs/ffi_pure.stderr
error: unsafe attribute used without unsafe
  --> $DIR/ffi_pure.rs:16:7
   |
LL |     #[ffi_pure]
   |       ^^^^^^^^ usage of unsafe attribute
   |
help: wrap the attribute in `unsafe(...)`
   |
LL |     #[unsafe(ffi_pure)]
   |       +++++++        +

error[E0755]: `#[ffi_pure]` may only be used on foreign functions
  --> $DIR/ffi_pure.rs:4:1
   |
LL | #[unsafe(ffi_pure)]
   | ^^^^^^^^^^^^^^^^^^^

error[E0755]: `#[ffi_pure]` may only be used on foreign functions
  --> $DIR/ffi_pure.rs:7:1
   |
LL | #[unsafe(ffi_pure)]
   | ^^^^^^^^^^^^^^^^^^^

error[E0755]: `#[ffi_pure]` may only be used on foreign functions
  --> $DIR/ffi_pure.rs:13:5
   |
LL |     #[unsafe(ffi_pure)]
   |     ^^^^^^^^^^^^^^^^^^^

error: aborting due to 4 previous errors

For more information about this error, try `rustc --explain E0755`.
